[package]
name = "nrosty"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0.82"
comfy-table = "7.1"


[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"